[package]
name = "entry-tutorial-main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
nalgebra-glm = "0.10"
png = "0.16"
pretty_env_logger = "0.4"
tobj = "2"
libloading = "0.7"
window-uniform = { path = "../reintro-window-uniform" }
vulkan = { path = "../reintro-vulkan" }