[package]
name = "entry_guide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
library_foundation_reintroduction = { path = "../library_foundation_reintroduction" }
library_foundation_vulkan_cooked = { path = "../library_foundation_vulkan_cooked" }
library_foundation_application_guide = { path = "../library_foundation_application_guide" }