[package]
name = "library_foundation_reintroduction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.29.1" }
tobj = { version = "3" }
nalgebra-glm = { version = "0.10" }
vulkanalia = { version = "0.25.0", features = ["libloading", "provisional", "window"] }